removed java security policy stuff... it causes problems in unix with signed jars apparently... and it doesn't matter in this context anyway, since we know we're inside our own tomcat instance.